--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "graceministryapp",
   "license": "0BSD",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,10 +10,37 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~54.0.10",
+    "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
+    "@react-native-picker/picker": "2.11.1",
+    "@react-navigation/bottom-tabs": "^7.4.8",
+    "@react-navigation/native": "^7.1.18",
+    "@react-navigation/native-stack": "^7.3.28",
+    "expo": "^54.0.13",
+    "expo-blur": "~15.0.7",
+    "expo-dev-client": "~6.0.13",
+    "expo-font": "~14.0.9",
+    "expo-image-picker": "~17.0.8",
+    "expo-linear-gradient": "~15.0.7",
+    "expo-speech": "~14.0.7",
     "expo-status-bar": "~3.0.8",
+    "firebase": "^12.4.0",
+    "prop-types": "^15.8.1",
     "react": "19.1.0",
-    "react-native": "0.81.4"
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-gradients": "^2.1.1",
+    "react-native-picker-select": "^9.3.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.0"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@react-native-community/cli": "^20.0.2",
+    "@react-native/metro-config": "^0.82.0",
+    "@types/react": "~19.1.10",
+    "typescript": "~5.9.2"
+  }
 }
