--- a/package.json
+++ b/package.json
@@ -30,17 +30,22 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-gradients": "^2.1.1",
     "react-native-picker-select": "^9.3.1",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "^0.21.0"
   },
   "private": true,
   "devDependencies": {
+    "@babel/plugin-transform-optional-chaining": "^7.27.1",
     "@react-native-community/cli": "^20.0.2",
     "@react-native/metro-config": "^0.82.0",
     "@types/react": "~19.1.10",
+    "@types/react-native": "^0.73.0",
+    
     "typescript": "~5.9.2"
   }
 }
